# rustspring

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: greeting.rs  main.rs  users.rs
config/: application-dev.toml  application-prod.toml  application.toml
crates/rustspring/: Cargo.toml  README.md
crates/rustspring-macros/: Cargo.toml  NOTICE  README.md
crates/rustspring-macros/src/: lib.rs
crates/rustspring/src/: app.rs  component.rs  config.rs  context.rs  db.rs  error.rs  lib.rs
crates/rustspring/tests/: component.rs  db.rs  db_sqlite.rs  inject.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
template/: .gitignore  Cargo.toml  README.md  cargo-generate.toml
template/config/: application-prod.toml  application.toml
template/src/: hello.rs  items.rs  main.rs
