[workspace]
resolver = "2"
members = ["crates/rustspring", "crates/rustspring-macros", "app"]
# The cargo-generate template contains liquid placeholders, not valid TOML.
exclude = ["template"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/piyooshsinha/rustspring"
authors = ["Piyoosh Sinha <piyooshsinha@gmail.com>"]

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
figment = { version = "0.10", features = ["toml", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Database backends (postgres/mysql/sqlite) are selected per-crate via features.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "macros", "chrono", "uuid"] }
futures = "0.3"
thiserror = "2"
