[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
rustspring = { git = "https://github.com/piyooshsinha/rustspring", branch = "main" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres"] }
