[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
# SQLite by default so the app runs with zero external services. Swap the
# feature to "postgres" or "mysql" (and update database.url) when you need them.
rustspring = { git = "https://github.com/piyooshsinha/rustspring", branch = "main", default-features = false, features = ["sqlite"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite"] }
