[package]
name = "rustspring-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Derive macros for the rustspring framework (#[derive(Component)])."
documentation = "https://docs.rs/rustspring-macros"
readme = "README.md"
keywords = ["rustspring", "derive", "macro", "component", "di"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
