[package]
name = "rustspring"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "A Spring Boot-style application framework for Rust: profiles, config, DI-style singletons, connection pools, transactions, and SPA serving out of the box."

[features]
default = ["postgres"]
postgres = ["dep:sqlx"]

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
figment = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true, optional = true }
futures = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
figment = { workspace = true, features = ["test"] }
